--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -8,6 +8,7 @@ $rtl: false !default;
 
 // Core colors
 $primary-color: #5755d9 !default;
+$primary-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
 $primary-color-dark: darken($primary-color, 3%) !default;
 $primary-color-light: lighten($primary-color, 3%) !default;
 $secondary-color: lighten($primary-color, 37.5%) !default;
@@ -36,7 +37,7 @@ $error-color: #ff0000 !default;
 // Other colors
 $code-color: #d73e48 !default;
 $highlight-color: #ffe9b3 !default;
-$body-bg: $bg-color-light !default;
+$body-bg: $primary-gradient !default;
 $body-font-color: lighten($dark-color, 5%) !default;
 $link-color: $primary-color !default;
 $link-color-dark: darken($link-color, 10%) !default;
